# fit-web

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
.github/actions/setup-fit-env/: action.yml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  release-bundle-macos.yml  security-code.yml  security-deps.yml  type-check.yml  unit-tests.yml
docs/forensics/: sslkey_log_forensic_reasoning_EN.md  sslkey_log_forensic_reasoning_IT.md
docs/qa/: manual-test-plan.md
docs/qa/runs/2026/: 2026-03-15_v1.0.0-rc4.md  example_2026-02-26_manual-test-log.md  example_2026-02-26_v1.0.0-rc1.md  example_2026-02-28_v1.0.0-campaign-summary.md  example_2026-02-28_v1.0.0-rc2.md
fit_web/: mini_browser.py  selected_area_screenshot.py  web.py  web_profile.py  web_ui.py  web_view.py
fit_web/lang/: __init__.py  en.json  it.json
fit_web/mitmproxy/: runner.py
fit_web/mitmproxy/addons/: fit_capture.py
fit_web/os_proxy_setup/: __init__.py
fit_web/os_proxy_setup/lin/: proxy.py
fit_web/os_proxy_setup/macos/: proxy.py
fit_web/os_proxy_setup/win/: proxy.py
fit_web/tasks/: acquisition.py  full_page_screenshot.py  save_page.py
fit_web/tests/tasks/: test_save_page.py
fit_web/ui/: resources.qrc  web.ui
fit_web/widgets/: __init__.py  find_bar.py
packaging/pyinstaller/hooks/: hook-numpy.py  hook-reportlab.graphics.barcode.py
packaging/pyinstaller/macos/: README.md  fit-web.spec
packaging/scripts/: build_macos_dmg.sh
tests/: check_codecs.py  conftest.py  smoke_webview.py
tests/contract/: test_public_api_contract.py  test_translations_contract.py
tests/e2e/: test_webview_smoke_e2e.py
tests/integration/: test_mitmproxy_runner_integration.py  test_save_page_task_integration.py
tests/unit/: test_find_bar_utils.py  test_fit_capture_addon.py  test_full_page_screenshot_task.py  test_lang.py  test_macos_proxy_manager.py  test_main.py  test_mitmproxy_runner.py  test_proxy_setup.py  test_selected_area_screenshot.py  test_web_behavior.py  test_web_utils.py
