[tool.poetry]
name = "fit-web"
version = "0.3.0"
description = "FIT WEB Scraper Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_web" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"


fit-bootstrap = {git = "https://github.com/fit-project/fit-bootstrap.git", rev = "main"}
fit-scraper = {git = "https://github.com/fit-project/fit-scraper.git", rev = "main"}
fit-verify-pdf-timestamp= {git = "https://github.com/fit-project/fit-verify-pdf-timestamp.git", rev = "main"}
fit-verify-pec = {git = "https://github.com/fit-project/fit-verify-pec.git", rev = "main"}
har2warc = "^1.0.4"
wacz = "^0.5.0"
setuptools = ">=75,<81"
fit-webview-bridge = "0.2.9a7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
