[tool.poetry]
name = "fit-web"
version = "0.3.0"
description = "FIT WEB Scraper Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_web" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "6.9.0"


fit-bootstrap = {git = "https://github.com/fit-project/fit-bootstrap.git", tag = "v1.0.0-rc1"}
fit-scraper = {git = "https://github.com/fit-project/fit-scraper.git", tag = "v1.0.0-rc1"}
fit_verify_pdf_timestamp = {git = "https://github.com/fit-project/fit-verify-pdf-timestamp.git", tag = "v1.0.0-rc1"}
fit_verify_pec = {git = "https://github.com/fit-project/fit-verify-pec.git", tag = "v1.0.0-rc1"}


har2warc = "^1.0.4"
wacz = "^0.5.0"
numpy = "^2.2.3"
setuptools = ">=75,<81"
fit-webview-bridge = "v1.0.0-rc1"
mitmproxy = "^12.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
